# build-deb

./: Gofer  Makefile  Makefile.am  Makefile.in  README.md  config-list  config.h  config.h.in  config.status  configure  configure.ac  control  data.tar.xz  description-pak  gofer_1.0-1_i386.deb  make-dryrun  postinst  test.sh
autom4te.cache/: output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
deb-packages/: gofer-1.0.deb
deb-packages/gofer-1.0/DEBIAN/: postinst
debian/: changelog  control  files  gofer.manpage  gofer.postinst
demos/: Makefile.in
doc/: Makefile
doc-pak/docs/: Makefile  Makefile.am  Makefile.in
scripts/: Makefile  Makefile.am  Makefile.in  final-wrapper.sh  gofer  makefile
src/: Gofc  Makefile  Makefile.in  backup-062220161236-pre-src.tgz  backup-062220161405-pre-pugofer.tgz  backup-062220161455-pre-gofer.tgz  backup-062220161456-pre-src.tgz  gofer_1.0-1_i386.deb  makefile  pugofer_1.0-1_i386.deb  src_20160622-1_i386.deb
